 - Obey SELECT's size attribute.
 - Replace image loading button and page menu option with a tools menu option.
 - Implemented the "overline" text-decoration.
 - Enhanced and cleaned up text decorations for SUB and SUP.
 - Added "View Stylesheets" to the page menu.
 - Remove standard_widget_colors dillorc option.
 - Added dillo(1) man page.
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
 - Fixed incorrect use of VOIDP2INT in Dialog_user_password_cb().
 - Ensure that the dlib dStr* functions are used everywhere.
 - Fixed a memory leak in Html_tag_open_link().
 - Fixed a memory leak in Klist().
 - Fix the comment for DLWin::del() (dpi/downloads.cc).
 - Removed redundant caller NULL checks already in the API.
   Patches: Jeremy Henty
+- Implemented Basic authentication!
   Patch: Jeremy Henty, Jorge Arellano Cid
+- Added "-fno-rtti -fno-exceptions" to CXXFLAGS (reduces binary size).
   Patch: Jorge Arellano Cid, place (AKA corvid)
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich
+- Made the DNS resolver report in numeric address notation.
   Patch: Justus Winter
+- Reduced warnings with gcc-4.3.
   Patch: Thomas Orgis
+- Made the parser recognize "[^ ]/>"-terminated XML elements.
 - Implemented basic CSS infrastructure.
 - Brought in Sebastian's CSS parser from dillo-0.8.0-css-3.
 - Read user style from ~/.dillo/style.css.
 - Added support for descendant and child selectors.
 - Improved CSS selector matching performance using hash tables.
 - Support selector specificity.
 - Add support for font-size and font-weight enum values.
 - Added "font_max_size", "font_min_size" dillorc options.
 - Add workaround for fltk bug #2062.